--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,7 +20,7 @@ def safeExtGet(prop, fallback) {
 }
 
 apply plugin: 'com.android.library'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 buildscript {
     // The Android Gradle plugin is only required when opening the android folder stand-alone.
@@ -112,7 +112,7 @@ afterEvaluate { project ->
     // https://www.oreilly.com/library/view/gradle-beyond-the/9781449373801/ch03.html
     task androidJavadoc(type: Javadoc) {
         source = android.sourceSets.main.java.srcDirs
-        classpath += files(android.bootClasspath))
+        classpath += files(android.bootClasspath)
 //        classpath += files(project.getConfigurations().getByName('compile').asList())
         project.getConfigurations().getByName('implementation').setCanBeResolved(true)
         classpath += files(project.getConfigurations().getByName('implementation').asList())
