--- a/android/build.gradle
+++ b/android/build.gradle
@@ -118,12 +118,12 @@ afterEvaluate { project ->
     }
 
     task androidJavadocJar(type: Jar, dependsOn: androidJavadoc) {
-        classifier = 'javadoc'
+        // classifier = 'javadoc'
         from androidJavadoc.destinationDir
     }
 
     task androidSourcesJar(type: Jar) {
-        classifier = 'sources'
+        // classifier = 'sources'
         from android.sourceSets.main.java.srcDirs
         include '**/*.java'
     }
